# yolov3-tf2

./: .gitignore  Dockerfile  LICENSE  README.md  colab_gpu.ipynb  conda-cpu.yml  conda-gpu.yml  convert.py  detect.py  detect_video.py  environment.yml  export_tfserving.py  generate_surgical_tools_dataset.R  multi_detect.py  pipeline.py  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py  train.py  train_eager.py  valohai.yaml  weights.py
.github/workflows/: cd.yml  ci.yml
data/: checkpoint  test.txt
docs/: training_voc.md
tests/: test_version.py
tools/: export_tflite.py  visualize_dataset.py  voc2012.py
tools/superbai/: superbai.py  superbai_converter_current.py  superbai_converter_legacy.py
yolov3_tf2/: __init__.py  batch_norm.py  dataset.py  models.py  ragged_dataset.py  utils.py
